--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -4,7 +4,7 @@ include $(top_srcdir)/build/modmake.rulesam
 MODNAME=mod_google_asr
 mod_LTLIBRARIES = mod_google_asr.la
 mod_google_asr_la_SOURCES  = mod_google_asr.c utils.c curl.c
-mod_google_asr_la_CFLAGS   = $(AM_CFLAGS) -I. -Wno-unused-variable -Wno-unused-function -Wno-unused-but-set-variable -Wno-unused-label -Wno-declaration-after-statement -Wno-pointer-sign
+mod_google_asr_la_CFLAGS   = $(AM_CFLAGS) -I. -Wno-unused-variable -Wno-unused-function -Wno-unused-but-set-variable -Wno-unused-label -Wno-declaration-after-statement -Wno-pointer-sign -Wno-pointer-arith
 mod_google_asr_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
 mod_google_asr_la_LDFLAGS  = -avoid-version -module -no-undefined -shared
 
